fix: allow featured topic titles to wrap to 2 lines
Titles were truncating with ellipsis. Now use -webkit-line-clamp: 2
so longer titles like "Changes in Experience Courses" display fully.

--- a/common/common.scss
+++ b/common/common.scss
@@ -36,6 +36,13 @@
 
 .homepage-feature-topic-wrapper h2 {
   text-align: left;
+  a {
+    white-space: normal;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
 }
 
 .custom-homepage-columns {
